# pretty_function_sandbox

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  Readme.md  docker_gcc.sh  type_name_stringliteral_test.cpp  xqms_test.cpp
detail/: type_name_compiler_capabilities.hpp  type_name_pretty_function.hpp  type_name_stringliteral.hpp  type_name_xqms_wip.hpp
